--- a/package.json
+++ b/package.json
@@ -15,19 +15,23 @@
     "@babel/preset-env": "^7.2.0",
     "autoprefixer": "^9.4.2",
     "babel-loader": "^8.0.4",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.0.0",
     "extract-css-chunks-webpack-plugin": "^3.2.1",
+    "fs": "0.0.1-security",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
+    "raw-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "file-loader": "^2.0.0",
