--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^2.0.0",
     "extract-css-chunks-webpack-plugin": "^3.2.1",
     "fs": "0.0.1-security",
+    "gsap": "^2.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -29,6 +30,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
+    "vue-waypoint": "^3.2.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
